testsuite/tests/saks/should_fail/saks_fail015.stderr

saks_fail015.hs:11:29: error: Not in scope: type variable ‘k’
